;**************************************************************************
;*                                                                        *
;*                                 OCaml                                  *
;*                                                                        *
;*                     Thomas Refis, Jane Street Europe                   *
;*                                                                        *
;*   Copyright 2018 Jane Street Group LLC                                 *
;*                                                                        *
;*   All rights reserved.  This file is distributed under the terms of    *
;*   the GNU Lesser General Public License version 2.1, with the          *
;*   special exception on linking described in the file LICENSE.          *
;*                                                                        *
;**************************************************************************

(copy_files# "%{env:ARCH=amd64}/*.ml{,i}")

(rule
 (enabled_if (= %{env:ARCH=amd64} "arm64"))
 (targets emit.ml)
 (mode    fallback)
 (deps    arm64/emit.mlp)
 (action
   (progn
     (with-stdout-to contains-input-name
       (bash "echo %{env:ARCH=arm64}/emit.mlp"))
     (with-stdout-to %{targets}
         (bash "%{dep:../tools/cvt_emit.exe} < `cat contains-input-name`")))))
