; These rules work around a dune restriction which doesn't permit the same
; compilation unit to be used in more than one executable or library.

(rule
  (targets main_native.ml)
  (action (copy main.ml %{targets})))

(rule
  (targets optmain_native.ml)
  (action (copy optmain.ml %{targets})))

(library
 (name flambda_backend_driver)
 (modes byte native)
 (ocamlopt_flags
  (:include %{project_root}/ocamlopt_flags.sexp))
 (libraries ocamloptcomp flambda2 gc_timings)
 (modules optcompile))
